# local-writing-app

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  CLAUDE.md  LICENSE  README.md
.claude/: launch.json  settings.json
backend/: pyproject.toml
backend/app/: main.py  models.py  models_plot.py  models_views.py  runtime.py  scope.py  view_grammar_generated.py
backend/app/models/: __init__.py  ai.py  annotations.py  base.py  entries.py  project.py  schema.py  snapshots.py
backend/app/routers/: __init__.py  ai.py  entries.py  lore.py  machine_settings.py  metadata.py  project.py  scenes.py  snapshots.py
backend/app/services/: machine_settings.py  markdown_scan.py  markdown_validation.py  migrations.py  project_service.py  tree_structure.py
backend/app/services/ai/: context_expander.py  context_presets.py  helpers.py  preview.py  providers.py  sessions.py  templates.py  tokens.py
backend/app/services/ai/profiles/: __init__.py  _baked_in.yaml  _loader.py  anthropic.py  base.py  ollama.py  openai.py  openrouter.py  registry.py
backend/app/services/project/: __init__.py  ai_invocations.py  assistants.py  chats.py  computed_metadata.py  default_schema.py  embedded_todos.py  errors.py  field_values.py  layers.py  lifecycle.py  lore.py  lore_mutations.py  manuscript.py  markers.py  metadata_values.py  mutation_sets.py  node_index.py  node_index_gate.py  node_index_patch.py  node_index_snapshot.py  node_ops.py  overrides.py  plots.py  project_node.py  prompts.py  references.py  research.py  scene_snapshots.py  scene_todos.py  schema.py  schema_cache.py  search.py  snapshot_diff.py  snapshot_drift.py  snapshot_witness.py  tags.py  todos.py  transformations.py  tree_configs.py  (+1 more)
backend/tests/: conftest.py  diff_fuzz.py  layer_fixtures.py  project_fixtures.py  test_ai_anthropic_caching.py  test_ai_chat.py  test_ai_chat_cost_surface.py  test_ai_chat_usage_capture.py  test_ai_context_pick_input.py  test_ai_cost_accumulator.py  test_ai_generate.py  test_ai_helpers.py  test_ai_invocations.py  test_ai_openrouter_caching.py  test_ai_policy_chain.py  test_ai_policy_read.py  test_ai_preview.py  test_ai_profile_endpoints.py  test_ai_profiles_base.py  test_ai_profiles_concrete.py  test_ai_providers_stream.py  test_ai_settings_layering.py  test_ai_templates.py  test_ai_tokens.py  test_ai_usage_metrics.py  test_as_of_l_schema.py  test_assistants.py  test_chat_session_inputs.py  test_chat_session_journal.py  test_chat_sessions.py  test_check_citations.py  test_context_expander.py  test_declared_chain.py  test_embedded_todos.py  test_fork_lore.py  test_gate_invariants.py  test_grammar_spike.py  test_intrinsic_fields.py  test_layer_overrides.py  test_layer_walk.py  (+43 more)
docs/: ai-model-selection.md  context-picker.md  editor-todo-invariants.md  frontend-architecture.md  metadata-strategy.md  (+5 more)
(+423 files in other folders)
