[project]
name = "local-writing-service"
version = "0.1.0"
description = "Local application service for a private fiction writing app"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.40.0",
  "fastapi>=0.115.0",
  "jinja2>=3.1.0",
  "openai>=1.50.0",
  "pydantic>=2.8.0",
  "pyyaml>=6.0.0",
  "tiktoken>=0.8.0",
  "uvicorn[standard]>=0.30.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

