[project]
name = "local-writing-service"
version = "0.1.0"
description = "Local application service for a private fiction writing app"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.40.0",
  "fastapi>=0.115.0",
  "jinja2>=3.1.0",
  "openai>=1.50.0",
  "pydantic>=2.8.0",
  "pyyaml>=6.0.0",
  "tiktoken>=0.8.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.15",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# Bug-catchers (F, B) first; the rest keep imports/idioms tidy.
# E501 (line length) is stylistic, not a bug source — left off.
select = ["E", "F", "W", "I", "B", "UP", "C4", "SIM"]
ignore = [
  "E501",   # line length — stylistic, not a bug source
  "UP042",  # str+Enum -> StrEnum changes str(member); the mix is deliberate
]

