[project]
name = "local-writing-service"
version = "0.1.0"
description = "Local application service for a private fiction writing app"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.40.0",
  "fastapi>=0.115.0",
  "jinja2>=3.1.0",
  "openai>=1.50.0",
  "pydantic>=2.8.0",
  "pyyaml>=6.0.0",
  "tiktoken>=0.8.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.15",
  "pre-commit>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# Bug-catchers (F, B) first; the rest keep imports/idioms tidy.
# E501 (line length) is stylistic, not a bug source — left off.
# NOTE: the complexity rules (PLR0912/13/15, C901) are NOT in this blocking
# select — they run ADVISORY (non-blocking) via the quality-gate hooks while we
# burn down the existing hits; promote them into `select` once the count is 0.
select = ["E", "F", "W", "I", "B", "UP", "C4", "SIM"]
ignore = [
  "E501",   # line length — stylistic, not a bug source
  "UP042",  # str+Enum -> StrEnum changes str(member); the mix is deliberate
]

# Thresholds for the advisory complexity rules (see the hooks). Args bumped
# from the default 5 — service methods / FastAPI routes legitimately take more.
[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.lint.mccabe]
max-complexity = 10

